--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,4 +1,7 @@
 footer{
+    color: var(--bila);
     background-color: var(--header-color);
     text-align: center;
+    padding: 5px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
