--- a/styles/collapsible.css
+++ b/styles/collapsible.css
@@ -1,7 +1,8 @@
 .collapsible {
     background-color: var(--primary-color);
-    color: var(--bila);
+    color: var(--secondary-color);
     font-family: 'Pathway Extreme', sans-serif;
+    font-weight: 700;
     cursor: pointer;
     padding: 15px;
     width: 100%;
@@ -9,17 +10,25 @@
     text-align: left;
     outline: none;
     font-size: 15px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   }
   .active, .collapsible:hover {
-    background-color: var(--nadpis-color);
+    background-color: var(--collapse-color);
+    color: var(--bila);
   }
   .content {
     padding: 0 18px;
     display: none;
     overflow: hidden;
     background-color: var(--secondary-color);
-    color: black;
   }
-  .collapsible b {
-    color: brown;
+  .content p {
+    color: var(--primary-color);
+}
+  .content b {
+    color: var(--primary-color);
+  }
+  .content a{
+    color: var(--header-color);
+    text-decoration: none; 
   }
